// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge组件 快照测试 基本使用 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxirZ dJuSRs sinoui-badge"
>
  <svg
    aria-hidden="true"
    className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
  className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
>
  <svg
    aria-hidden="true"
    className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 指定封顶数值 1`] = `
Array [
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw iLlfvZ"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 iUpzoi"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw SJuto"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 fgEXpB"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      99+
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 指定数字 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxirZ dJuSRs sinoui-badge"
>
  <span
    className="sc-AxiKw iLlfvZ"
=======
  className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
>
  <span
    className="Badge__BadgeCircle-sc-1mox8ry-1 iUpzoi"
>>>>>>> origin/bottomNavigation
    color="error"
  >
    8
  </span>
  <svg
    aria-hidden="true"
<<<<<<< HEAD
    className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
    className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 指定颜色 1`] = `
Array [
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw fYZPVv"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 kQonTs"
>>>>>>> origin/bottomNavigation
      color="primary"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw kLBrco"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 ehiKHD"
>>>>>>> origin/bottomNavigation
      color="secondary"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw gpksfY"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 fbsKxv"
>>>>>>> origin/bottomNavigation
      color="warning"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw fRTSok"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 kRCPyf"
>>>>>>> origin/bottomNavigation
      color="success"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw iLlfvZ"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 iUpzoi"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw dyhdmU"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 eIXhYb"
>>>>>>> origin/bottomNavigation
      color="info"
    >
      99
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 设置为圆点形式 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxirZ dJuSRs sinoui-badge sinoui-badge--dot"
>
  <span
    className="sc-AxiKw cjloKU"
=======
  className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge sinoui-badge--dot"
>
  <span
    className="Badge__BadgeCircle-sc-1mox8ry-1 irelgB"
>>>>>>> origin/bottomNavigation
    color="error"
  />
  <svg
    aria-hidden="true"
<<<<<<< HEAD
    className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
    className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置徽标的显示位置 1`] = `
Array [
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw iLlfvZ"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 iUpzoi"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw eXLYOq"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 gvQXZ"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw dYEaLl"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 fPEXWi"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
  <span
<<<<<<< HEAD
    className="sc-AxirZ dJuSRs sinoui-badge"
  >
    <span
      className="sc-AxiKw jHcvHu"
=======
    className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
  >
    <span
      className="Badge__BadgeCircle-sc-1mox8ry-1 imBWBZ"
>>>>>>> origin/bottomNavigation
      color="error"
    >
      8
    </span>
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      fill="currentColor"
      focusable="false"
      height={24}
      role="presentation"
      size={24}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </span>,
]
`;

exports[`Badge组件 快照测试 设置数字为0时显示 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxirZ dJuSRs sinoui-badge"
>
  <span
    className="sc-AxiKw fkFzjt"
=======
  className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
>
  <span
    className="Badge__BadgeCircle-sc-1mox8ry-1 kYsYRK"
>>>>>>> origin/bottomNavigation
    color="error"
  >
    0
  </span>
  <svg
    aria-hidden="true"
<<<<<<< HEAD
    className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
    className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置自定义badge的内容 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxirZ dJuSRs sinoui-badge"
>
  <div
    className="sc-AxhCb hdAhoY sinoui-badge__content"
=======
  className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
>
  <div
    className="Badge__Wrapper-sc-1mox8ry-2 cAjkyo sinoui-badge__content"
>>>>>>> origin/bottomNavigation
  >
    4
  </div>
  <svg
    aria-hidden="true"
<<<<<<< HEAD
    className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
    className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;

exports[`Badge组件 快照测试 设置鼠标悬浮时显示的文字 1`] = `
<span
<<<<<<< HEAD
  className="sc-AxirZ dJuSRs sinoui-badge"
>
  <span
    className="sc-AxiKw iLlfvZ"
=======
  className="Badge__BadgeWrapper-sc-1mox8ry-0 ljnePt sinoui-badge"
>
  <span
    className="Badge__BadgeCircle-sc-1mox8ry-1 iUpzoi"
>>>>>>> origin/bottomNavigation
    color="error"
    title="文字"
  >
    1
  </span>
  <svg
    aria-hidden="true"
<<<<<<< HEAD
    className="sc-AxjAm cpsEpc sinoui-svg-icon"
=======
    className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
    fill="currentColor"
    focusable="false"
    height={24}
    role="presentation"
    size={24}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
    />
  </svg>
</span>
`;
